css/style.css
/* ... */
h1,
h3 {
  font-family: "acumin-pro-wide", "acumin-pro", sans-serif;
}

h1 {
  font-weight: 800;
  font-size: 2.75em;
  color: var(--av-gold);
  padding: 44px 0;
}

h2 {
  font-family: "acumin-pro", sans-serif;
  font-weight: 400;
  font-size: 2em;
  color: gray;
}

h3 {
  font-weight: 700;
  font-size: 1.25em;
  color: var(--av-teal);
}

h4 {
  font-size: 1.1em;
  font-weight: 600;
}

p {
  display: inline-block;
  margin-right: auto;
  padding-top: 0.25em;
  padding-bottom: .5em;
}

p:last-of-type{
  padding-bottom: 1em;
}

#project p strong {
  font-weight: 600;
}

#hero {
  text-align: center;
}

#hero h1 {
  margin: 0;
  padding: 0.5em 0 0.25em;
  -webkit-text-stroke: 1px white;
  text-shadow: 1px 2px 1px dimgray;
}

h1#workHero {
  padding: 1em 0;
  font-size: 2em;
}

h1#aboutHero {
  padding: 1em 0;
}

#hero span {
  display: block;
  font-weight: 400;
  font-size: 0.4em;
  line-height: 1.6em;
  color: dimgray;
  text-align: center;
  -webkit-text-stroke: 0px;
  text-shadow: none
}

#workHero span {
  font-size: .5em;
}

#work {
  text-align: center;
}

#work h2 {
  display: none;
}

#work h3 {
  font-size: 1.5em;
  padding: 0.5em 0 0;
  color: var(--av-green);
}

#work p {
  padding: 0.5em 0 1em;
}

/* Projects */
main#project {
  padding-bottom: 0;
}

div.row.reverse {
  flex-direction: column-reverse;
}

div.row#hero {
  padding-bottom: 1em;
}

#heroImg {
  padding: 0 10px;
}

.section {
  padding-bottom: 5em;
  border-bottom: 1px solid lightgray;
}

.section::after {
  content: "";
  clear: both;
  display: table;
}

#work .section:last-of-type {
  padding-bottom: 1em;
}

#contact {
  background-color: var(--av-bg);
}

#contact div{
  background-color: var(--av-bg);
}

#contact .section {
  padding: 1em 0 2.5em;
}

/* .capFirst {
  font-size: 1.25em;
} */

#contents {
  background-color: var(--av-teal);
}

#contents ul {
  list-style-type: none;
  margin: 0;
  padding-bottom: 0;
  text-align: center;
  line-height: 2.4em;
  text-decoration: underline var(--av-link);
}

#tools p {
  font-size: 0.8em;
  width: 100%;
  text-align: center;
  margin: 0 auto;
  padding: 0.25em 0 0;
}

#project h2 {
  font-weight: 800;
  color: var(--av-gold);
  padding: 2em 0em 2em;
  text-align: center;
  -webkit-text-stroke: 1px white;
  text-shadow: 1px 2px 1px dimgray;
}

#project h3 > i {
  color: dimgray;
}

h2 > span {
  line-height: 2.5em;
  font-weight: 300;
  font-size: 0.67em;
  color: dimgray;
  -webkit-text-stroke: 0px;
  text-shadow: none;
}

#project #prototype h2 {
  padding: 2em 0em 1.5em;
}

#contents h2 {
  font-family: "acumin-pro", sans-serif;
  font-weight: 700;
  color: white;
  padding: 2em 0 1em;
  text-align: center;
  text-shadow: 1px 2px 1px black;
}

#project .userTests .row {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

#project .userTests p {
  width: 100%;
  font-size: 1.2em;
  margin-left: auto;
  text-align: center;
  padding-bottom: .5em;
}

#project h3 {
  font-weight: 600;
  padding: .5em 0;
}

#project h4 {
  font-family: "acumin-pro-wide", "acumin-pro", sans-serif;
  color: var(--av-teal);
}

#project h3 span {
  color: dimgray;
}

#project b {
  font-weight: 700;
  color: var(--av-green);
  text-shadow: 0px 1px black;
}

#project img {
  padding: 1em;
  max-width: 300px;
}

.projGif {
  padding-bottom: 2em;
}

.projGif picture img {
  width: 175px;
}

#biggestFinding img {
  width: 200px;
}

#demoVid {
  width: 100%;
  height: 250px;
}

#interactiveProto {
  display: flex;
  font-size: 1.5em;
  justify-content: center;
}

#project #prototype img {
  padding: 0 0 1em;
}

/* About */

#about h2 {
  text-align: center;
  padding: 1em 0em 1em;
}

#about img {
  max-width: 500px;
  padding: 1em;
}

#about p {
  padding-bottom: 0.5em;
}

#about #uxSkills,
#uxTools,
#softSkills {
  margin: 0;
  padding-bottom: 0;
  font-size: 0.8em;
  text-align: center;
}

#cvButton {
  padding-top: 2em;
}

/* Links */
a {
  font-family: "acumin-pro-wide", "acumin-pro", sans-serif;
  color: var(--av-link);
  text-decoration: none;
}

a:visited {
  color: var(--av-linkVisited);
}

a:hover {
  opacity: 0.8;
}

a:active {
  color: var(--av-link);
}

#contents a {
  font-weight: 300;
  color: var(--av-link);
}

#contents a > strong {
  font-weight: 600;
  color: white;
}

#contents a.button {
  color: white;
  text-decoration: none;
}

/* Buttons */
.button {
  display: inline-block;
  color: white;
  background-color: var(--av-link);
  text-shadow: 0px 2px var(--av-linkVisited);
  font-weight: 500;
  padding: 10px 20px;
  border-radius: 8px;
  border-bottom: 3px solid;
  border-bottom-color: var(--av-linkVisited);
  transition: 300ms opacity;
}

.button:visited {
  color: white;
}

.button:hover {
  opacity: 0.8;
  text-decoration: none;
}

.button:active {
  background-color: var(--av-link);
}

/* li a.listButton1 {
  font-family: "acumin-pro", sans-serif;
  margin: 0.8em;
  padding: 8px 16px;
} */

li a.listButton2 {
  font-family: "acumin-pro", sans-serif;
  margin: .8em;
  padding: 8px 16px;
}

/* Footer */

footer {
  display: block;
  text-align: center;
  width: 100%;
}

#contact .row {
  align-items: center;
}

#contact .column {
  display: flex;
  height: 80%;
  align-items: center;
}

#contact h2 {
  color: var(--av-teal);
  margin-bottom: 0;
  padding: 33px 0 11px;
}

#contact p {
  width: 100%;
}

#linkedin {
  display: inline-block;
  vertical-align: middle;
  padding: 20px 10px 10px;
}

#linkedin svg {
  width: 48px;
  height: 48px;
}

#copyright {
  font-size: 0.8em;
  background-color: var(--av-teal);
  margin: 0;
  padding: 1em 0;
}

#copyright p {
  font-size: 0.8em;
  margin: 0 auto;
  color: white;
  padding: 0;
}
/* ... */

